flex.output
Grammar

    0 $accept: stms $end

    1 stms: %empty
    2     | stms stm EOL

    3 stm: factor
    4    | factor SUM stm
    5    | factor SUB stm

    6 factor: term
    7       | factor DIV term
    8       | factor MUL term
    9       | factor POW term

   10 term: NUM
   11     | ABS term


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM (258) 10
    SUM (259) 4
    SUB (260) 5
    MUL (261) 8
    DIV (262) 7
    POW (263) 9
    ABS (264) 11
    EOL (265) 2


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    stms (12)
        on left: 1 2
        on right: 0 2
    stm (13)
        on left: 3 4 5
        on right: 2 4 5
    factor (14)
        on left: 6 7 8 9
        on right: 3 4 5 7 8 9
    term (15)
        on left: 10 11
        on right: 6 7 8 9 11


State 0

    0 $accept: • stms $end

    $default  reduce using rule 1 (stms)

    stms  go to state 1


State 1

    0 $accept: stms • $end
    2 stms: stms • stm EOL

    $end  shift, and go to state 2
    NUM   shift, and go to state 3
    ABS   shift, and go to state 4

    stm     go to state 5
    factor  go to state 6
    term    go to state 7


State 2

    0 $accept: stms $end •

    $default  accept


State 3

   10 term: NUM •

    $default  reduce using rule 10 (term)


State 4

   11 term: ABS • term

    NUM  shift, and go to state 3
    ABS  shift, and go to state 4

    term  go to state 8


State 5

    2 stms: stms stm • EOL

    EOL  shift, and go to state 9


State 6

    3 stm: factor •
    4    | factor • SUM stm
    5    | factor • SUB stm
    7 factor: factor • DIV term
    8       | factor • MUL term
    9       | factor • POW term

    SUM  shift, and go to state 10
    SUB  shift, and go to state 11
    MUL  shift, and go to state 12
    DIV  shift, and go to state 13
    POW  shift, and go to state 14

    $default  reduce using rule 3 (stm)


State 7

    6 factor: term •

    $default  reduce using rule 6 (factor)


State 8

   11 term: ABS term •

    $default  reduce using rule 11 (term)


State 9

    2 stms: stms stm EOL •

    $default  reduce using rule 2 (stms)


State 10

    4 stm: factor SUM • stm

    NUM  shift, and go to state 3
    ABS  shift, and go to state 4

    stm     go to state 15
    factor  go to state 6
    term    go to state 7


State 11

    5 stm: factor SUB • stm

    NUM  shift, and go to state 3
    ABS  shift, and go to state 4

    stm     go to state 16
    factor  go to state 6
    term    go to state 7


State 12

    8 factor: factor MUL • term

    NUM  shift, and go to state 3
    ABS  shift, and go to state 4

    term  go to state 17


State 13

    7 factor: factor DIV • term

    NUM  shift, and go to state 3
    ABS  shift, and go to state 4

    term  go to state 18


State 14

    9 factor: factor POW • term

    NUM  shift, and go to state 3
    ABS  shift, and go to state 4

    term  go to state 19


State 15

    4 stm: factor SUM stm •

    $default  reduce using rule 4 (stm)


State 16

    5 stm: factor SUB stm •

    $default  reduce using rule 5 (stm)


State 17

    8 factor: factor MUL term •

    $default  reduce using rule 8 (factor)


State 18

    7 factor: factor DIV term •

    $default  reduce using rule 7 (factor)


State 19

    9 factor: factor POW term •

    $default  reduce using rule 9 (factor)
